Fixed the alignment issue and updated the nav link

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ a:hover{color:#6D6E71; text-decoration:underline;}
 .hm-content-area .theme-bg h2{ font-size:24px; line-height:41px;font-family: avenir-heavy; margin-top:50px; margin-bottom:0px;text-transform: uppercase;}
 .hm-content-area .theme-bg h2 span{top: 8px;position: relative;}
 
-.main-banner img, .hm-locater-img img{ width:100%;}
+.main-banner img, .hm-locater-img img{ width:100%; max-height: 284.567px; }
 
 .hm-locater-img{ position:relative; margin-bottom:10px;}
 .hm-locater-img h2{position:absolute; bottom:50%; left:65px; color:#C1D52F; font-size:36px; margin:0px; text-transform:uppercase;line-height: 26px;}
